make the api - rest, add roles and add pagination
